--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "peresmishnyk/laravel-glide": "^1.0",
         "spatie/laravel-permission": "^5.5",
         "stripe/stripe-php": "^7.113",
-        "yajra/laravel-datatables": "^1.5"
+        "yajra/laravel-datatables": "^1.5",
+        "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
